# bmstu_db_aa

./: .gitmodules
lab_01/: .gitignore  CMakeLists.txt  diagram.drawio
lab_01/docs/src/: 00-title.tex  10-intro.tex  20-analytical.tex  30-design.tex  40-technological.tex  50-experimental.tex  60-conclusion.tex  main.bib  main.tex
lab_01/docs/src/datasheets/: all.csv  itr.csv
lab_01/docs/src/listings/: dleven_iter.c  dleven_rec.c  leven_iter.c  leven_rec.c  support.c  test_leven_iter_01.cpp  test_leven_iter_02.cpp
lab_01/libs/levenshtein/: CMakeLists.txt
lab_01/libs/levenshtein/include/levenshtein/: leven_dist.h
lab_01/libs/levenshtein/src/: leven_dist.c
lab_01/libs/levenshtein/tests/: damerau_leven_iter.cpp  damerau_leven_rec.cpp  leven_iter.cpp  leven_rec.cpp
lab_01/src/: main.c
lab_01/tests/: main.c
lab_04/: .gitignore  CMakeLists.txt  diagrams.drawio
lab_04/docs/src/: 00-title.tex  10-intro.tex  20-analytical.tex  30-design.tex  40-technological.tex  50-experimental.tex  60-conclusion.tex  70-biblio.tex  main.bib
lab_04/docs/src/datasheets/: time_by_algorithm.csv  time_by_th_num.csv  time_th_num.csv
lab_04/docs/src/listings/: nonparallel.cpp  parallel.cpp
lab_04/libs/stringcmp/: CMakeLists.txt
lab_04/libs/stringcmp/include/stringcmp/: stringcmp.h
lab_04/libs/stringcmp/src/: stringcmp.cpp
lab_04/src/: main.cpp
lab_04/tests/: main.cpp
